SCMS-45 - Fix overlapping navigation issues

--- a/scarlet/cms/static/scarlet/source/stylesheets/common/_nav-main.scss
+++ b/scarlet/cms/static/scarlet/source/stylesheets/common/_nav-main.scss
@@ -78,7 +78,8 @@
 
 .nav-main__sublist {
 	@include flyout($hover-selector: '.nav-main__item');
-	left: -8px;
+    left: -8px;
+    pointer-events: none;
 
 	// .fa-caret-up
 	&:before {
